Grace/tests/gibbs/errors/t061.grace
// ERROR = P1018
print(42,)
